# NodeDataFlowEditor_without_Qt_signals

./: CMakeLists.txt  README.md
NodeDataFlowEditor/: CMakeLists.txt
NodeDataFlowEditor/common/: CMakeLists.txt
NodeDataFlowEditor/common/model/include/common/model/: AbstractItemModel.hpp  AbstractPathModel.hpp
NodeDataFlowEditor/common/model/src/: AbstractItemModel.cpp  AbstractPathModel.cpp
NodeDataFlowEditor/common/presenter/include/common/presenter/: AbstractItemPresenter.hpp  AbstractPathPresenter.hpp
NodeDataFlowEditor/common/presenter/src/: AbstractItemPresenter.cpp  AbstractPathPresenter.cpp
NodeDataFlowEditor/common/taggable/include/common/taggable/: TagApplicator.hpp  TagRegistry.hpp  Taggable.hpp
NodeDataFlowEditor/common/utility/include/common/utility/: ConnectionInfo.hpp  ConnectionPortData.hpp  GraphicsProperties.hpp
NodeDataFlowEditor/common/view/include/common/view/: AbstractItemView.hpp  AbstractPathView.hpp
NodeDataFlowEditor/common/view/src/: AbstractItemView.cpp  AbstractPathView.cpp
NodeDataFlowEditor/core/: CMakeLists.txt
NodeDataFlowEditor/core/model/include/core/model/: ConnectionPathModel.hpp  EditableArrowItemModel.hpp  NodeItemModel.hpp  PortItemModel.hpp
NodeDataFlowEditor/core/model/src/: ConnectionPathModel.cpp  EditableArrowItemModel.cpp  NodeItemModel.cpp  PortItemModel.cpp
NodeDataFlowEditor/core/presenter/include/core/presenter/: ConnectionPathPresenter.hpp  EditableArrowItemPresenter.hpp  NodeItemPresenter.hpp  PortItemPresenter.hpp
NodeDataFlowEditor/core/presenter/src/: ConnectionPathPresenter.cpp  EditableArrowItemPresenter.cpp  NodeItemPresenter.cpp  PortItemPresenter.cpp
NodeDataFlowEditor/core/view/include/core/view/: ConnectionPathView.hpp  EditableArrowItemView.hpp  GraphScene.hpp  GraphView.hpp  NodeItemView.hpp  PortItemView.hpp
NodeDataFlowEditor/core/view/src/: ConnectionPathView.cpp  EditableArrowItemView.cpp  GraphScene.cpp  GraphView.cpp  NodeItemView.cpp  PortItemView.cpp
base/: CMakeLists.txt
base/mvp/: CMakeLists.txt
base/mvp/include/mvp/model/: IModel.hpp
base/mvp/include/mvp/presenter/: IPresenter.hpp  Presenter.hpp
base/mvp/include/mvp/utility/: Signal.hpp
base/mvp/include/mvp/view/: IViewItem.hpp
example/: main.cpp
